# JACKPOT

./: .gitignore  README.md  license
backend/: package.json
backend/backend/: .env
backend/src/: db.js  server.js
backend/src/api/: geolocation.js  leaderboard.js  rewards.js
contracts/btc_rewards_program/: Anchor.toml  Cargo.toml
contracts/btc_rewards_program/src/: errors.rs  lib.rs  state.rs
contracts/btc_rewards_program/src/instructions/: airdrop_btc.rs  annual_btc_hide.rs  collect_fees.rs  distribute_btc.rs  fetch_btc_price.rs  init_wallets.rs  reset_annual_hide.rs
contracts/btc_rewards_program/tests/: btc_tests.rs
contracts/jackpot_program/: Anchor.toml  Cargo.toml
contracts/jackpot_program/src/: errors.rs  lib.rs  state.rs
contracts/jackpot_program/src/instructions/: airdrop_seek.rs  burn.rs  buyback.rs  community_events.rs  fetch_price.rs  hide.rs  init_game.rs  microtransactions.rs  seek.rs  update_rank.rs
contracts/nft_program/: Anchor.toml  Cargo.toml
contracts/nft_program/src/: errors.rs  lib.rs  state.rs
contracts/nft_program/src/instructions/: airdrop.rs  burn_upgrade.rs  mint.rs  rarity_halving.rs
contracts/token_program/: Anchor.toml  Cargo.toml
contracts/token_program/src/: errors.rs  lib.rs
contracts/token_program/src/instructions/: governance.rs
frontend/: package.json
frontend/src/components/: HintDisplay.js  MapView.js  WalletConnect.js
frontend/src/screens/: SeekScreen.js  leaderboard.js
scripts/: deploy.sh
