[package]
name = "jackpot_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jackpot_program"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
nft_program = { path = "../nft_program" }
serde_json = "1.0"
rand = "0.8"

[profile.release]
overflow-checks = true
